crates/ruff_python_parser/tests/snapshots/valid_syntax@params_non_default_after_star.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/params_non_default_after_star.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..72,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..33,
                    is_async: false,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("foo"),
                            range: 4..7,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 7..28,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 12,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 10..12,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 18,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 17..18,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 17..18,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                end: 24,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 20..21,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 20..21,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 22..24,
                                            value: Int(
                                                11,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                end: 27,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 26..27,
                                    name: Identifier {
                                        id: Name("d"),
                                        range: 26..27,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 30..33,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 30..33,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 34..71,
                    is_async: false,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("foo"),
                            range: 38..41,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 41..66,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 46,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 42..43,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 42..43,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 44..46,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 48..53,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 49..53,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 56,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 55..56,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 55..56,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                end: 62,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 58..59,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 58..59,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 60..62,
                                            value: Int(
                                                11,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                end: 65,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 64..65,
                                    name: Identifier {
                                        id: Name("d"),
                                        range: 64..65,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 68..71,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
